--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -91,14 +91,14 @@ jobs:
           echo "📁 Contents of allure-history folder:"
           ls -la ./allure-history
     #
-    #  - name: 🔍 Inspect allure-history/last-history folder
-    #    run: |
-    #      echo "📁 Contents of allure-history/last-history folder:"
-    #      ls -la ./allure-history/last-history
-    #
-      - name: 🔍 Inspect gh-pages folder
+      - name: 🔍 Inspect allure-history/last-history folder
         run: |
-          echo "📁 Contents of gh-pages folder:"
+          echo "📁 Contents of allure-history/last-history folder:"
+          ls -la ./allure-history/last-history
+    #
+      - name: 🔍 Inspect Previous History folder
+        run: |
+          echo "📁 Contents of Previous History folder:"
           ls -la ./previous-history
       - name: 🔍 Inspect gh-pages folder
         run: |
