--- a/.github/workflows/playwright_full_history.yml
+++ b/.github/workflows/playwright_full_history.yml
@@ -66,8 +66,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          #workflow: ${{ steps.get_workflow_id.outputs.workflow_id }}
-          workflow: playwright.yml
+          workflow: playwright_full_history.yml
           workflow_conclusion: completed
           name: history-artifact
           path: allure-history
@@ -75,9 +74,10 @@ jobs:
           if_no_artifact_found: warn
       #    
       - name: 📁 Copy allure-history to gh-pages folder # Allure-history is from artifacts
+        # if [ -d "previous-history" ] && [ "$(ls -A previous-history)" ]; then 
         run: |
           mkdir -p gh-pages
-          if [ -d "gh-pages" ]; then
+          if [ -d "gh-pages" ] && [ -d "allure-history" ]; then
             cp -r allure-history/. gh-pages/
           fi
     #
@@ -89,27 +89,30 @@ jobs:
       - name: 🔍 Inspect allure-history folder
         run: |
           echo "📁 Contents of allure-history folder:"
-          ls -la ./allure-history
+          if [ -d "allure-history" ]; then
+            ls -la ./allure-history
+          fi  
     #
       - name: 🔍 Inspect allure-history/last-history folder
         run: |
           echo "📁 Contents of allure-history/last-history folder:"
-          ls -la ./allure-history/last-history
+          if [ -d "allure-history/last-history" ]; then
+            ls -la ./allure-history/last-history
+          fi   
     #
       - name: 🔍 Inspect gh-pages folder
         run: |
           echo "📁 Contents of gh-pages folder:"
-          ls -la ./gh-pages
+          if [ -d "gh-pages" ]; then
+            ls -la ./gh-pages
+          fi  
       #
       - name: 🔍 Inspect gh-pages/last-history folder
         run: |
           echo "📁 Contents of gh-pages/last-history folder:"
-          ls -la ./gh-pages/last-history
-      #
-      - name: 🔍 Inspect Allure Results folder
-        run: |
-          echo "📁 Contents of allure-resuts:"
-          ls -la ./allure-results
+          if [ -d "gh-pages/last-history" ]; then
+            ls -la ./gh-pages/last-history
+          fi  
     #      
       - name: 📊 Generate Allure Report
         uses: simple-elf/allure-report-action@master
