--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -62,17 +62,10 @@ jobs:
           cache: 'npm'
       #
       - name: 📦 Install dependencies
-        run: npm ci
-      #
-      - name: 🗄️ Cache Playwright browsers
-        id: playwright-cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-      #
+        run: npm install
+      #  
       - name: 🖥️ Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
+        run: npx playwright install
       #
       - name: 🧾 Run test file
         run: |
